--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,24 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* for scrollbar */
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background-color: rgb(34, 34, 34);
-  /* border-radius: 10px; */
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(64, 64, 64);
-  border-radius: 10px;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -31,7 +13,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
 
-    --primary: 193, 100%, 86%;
+    --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
 
     --secondary: 0 0% 96.1%;
@@ -57,13 +39,13 @@
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
 
-    --card: white;
+    --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
 
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 193, 100%, 86%;
+    --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
 
     --secondary: 0 0% 14.9%;
@@ -92,5 +74,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-@import "./mdxContent.css";
