feat: responsive, need to review select date bug

--- a/src/globals.css
+++ b/src/globals.css
@@ -22,6 +22,8 @@
 
 @layer base {
   :root {
+    --sky-100: 203.88, 83.6%, 93.7%;
+    --sky-200: 206.4, 86.1%, 85.3%;
     --fc-page-bg-color: none;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -32,10 +34,10 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
 
-    --primary: rgba(186, 230, 253, 1); /* sky-200 */
+    --primary: var(--sky-200); /* sky-200 */
     --primary-foreground: 0 0% 98%;
 
-    --secondary: rgba(224, 242, 254, 1); /* sky-100 */
+    --secondary: var(--sky-100); /* sky-100 */
     --secondary-foreground: 0 0% 9%;
 
     --muted: 0 0% 96.1%;
@@ -64,7 +66,7 @@
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: rgba(186, 230, 253, 1);
+    --primary: var(--sky-100);
     --primary-foreground: 0 0% 9%;
 
     --secondary: 0 0% 14.9%;
@@ -100,7 +102,7 @@
 }
 
 .fc .fc-timegrid-col.fc-day-today {
-  background-color: var(--secondary) !important;
+  background-color: hsl(var(--secondary)) !important;
 }
 
 .fc-theme-standard .fc-scrollgrid {
@@ -108,7 +110,7 @@
 }
 
 .fc .fc-timegrid-slot-label {
-  height: 2.5rem !important;
+  height: 1.7rem !important;
 }
 
 @import "./mdxContent.css";
